syntax = "proto3";

import "google/protobuf/wrappers.proto";
import "Messages/CommonTypes.proto";

option csharp_namespace = "GrpcServer.Api.Protos.Services.TypeTestingServices";

package grpc_server.api.protos.services.type_testing_services;

service ForGuid {
    rpc Operation (ForGuidOperationRequest) returns (google.protobuf.StringValue);
    rpc OperationCollection (ForGuidOperationCollectionRequest) returns (messages.ListOfString);
    rpc OperationNullable (ForGuidOperationNullableRequest) returns (google.protobuf.StringValue);
    rpc OperationNullableCollection (ForGuidOperationNullableCollectionRequest) returns (messages.ListOfString);
}

message ForGuidOperationRequest {
    string param = 1;
}

message ForGuidOperationCollectionRequest {
    repeated string param = 1;
}

message ForGuidOperationNullableRequest {
    google.protobuf.StringValue param = 1;
}

message ForGuidOperationNullableCollectionRequest {
    messages.ListOfString param = 1;
}
